@@ -1,4 +1,4 @@
 <div style="background-color: #eee; border: 1px dotted #aaa; width: 400px; padding: 6px; margin-bottom: 6px;">
-	<b>Admin Menu:</b> &nbsp;<a href="/admin">Admin Config</a> |
+	<a href="/admin">Admin Config</a> |
 	<a href="/admin/categories">Manage Categories</a>
 </div>
