@@ -4,15 +4,16 @@
 <%= render :partial => 'admin/menu' %>
 
 <% form_for :config, @config, :url => {:action => :update_config} do |c| %>
-	<div style="width: 500px; text-align: right;"><%= submit_tag "Save Changes" %></div>
-	<table width="436px" style="margin-top: 10px; margin-bottom: 10px;" cellpadding="0" cellspacing="0">
+	<div style="width: 630px; text-align: right;"><%= submit_tag "Save Changes" %></div>
+	<table width="98%" style="margin-top: 10px; margin-bottom: 10px;" cellpadding="0" cellspacing="0">
 		<% @config.each do |c| %>
 			<% k, v = *c %>
 			<tr>
-				<td width="140px;" class="tlabel"><%= k %></td>
-				<td><input class="" maxlength="255" name="config[<%= k %>]" value="<%= v %>" size="40" type="text" /> </td>
+				<td width="140px;" class="tlabel" style="font-size: .8em;"><%= k %></td>
+				<td width="280px"><input class="" maxlength="255" name="config[<%= k %>]" value="<%= v %>" size="40" type="text" /> </td>
+				<td><%= @explanation[k] || '' %></td>
 			</tr>
 		<% end %>
 	</table>
-	<div style="width: 500px; text-align: right;"><%= submit_tag "Save Changes" %></div>
+	<div style="width: 630px; text-align: right;"><%= submit_tag "Save Changes" %></div>
 <% end %>
